# PBX-transcribe

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  build_portable_viewer.ps1  config.example.json  pyproject.toml  run_pipeline.ps1
docker/: nvidia-diarization.Dockerfile
packaging/: viewer_entry.py
src/pbx_transcribe/: __init__.py  audio.py  cli.py  config.py  correction.py  diarization.py  jobs.py  metrics.py  models.py  pipeline.py  portable.py  privacy.py  server.py  storage.py  stt.py
src/pbx_transcribe/static/: app.js  index.html  styles.css
tests/: test_config.py  test_correction.py  test_diarization.py  test_jobs.py  test_metrics.py  test_pipeline.py  test_privacy.py  test_server.py
